the damn ig screen not loading

--- a/login.kv
+++ b/login.kv
@@ -1,7 +1,7 @@
 #:include ready.kv
 
 <Login>:
-    BoxLayout
+    BoxLayout:
         id: login_layout
         orientation: 'vertical'
         padding: [10,50,10,50]
