--- a/iglogin.kv
+++ b/iglogin.kv
@@ -1,7 +1,4 @@
-#:include ready.kv
-#:include iglogin.kv
-
-<Login>:
+<IGLogin>:
     BoxLayout:
         id: login_layout
         orientation: 'vertical'
@@ -9,14 +6,14 @@
         spacing: 50
 
         Label:
-            text: 'Welcome to Intelligent Learning'
+            text: 'Please enter your Instagram username and password to continue.'
             font_size: 32
 
         BoxLayout:
             orientation: 'vertical'
 
             Label:
-                text: 'Enter your username'
+                text: 'Enter your Instsagram username'
                 font_size: 18
                 halign: 'left'
                 text_size: root.width-20, 20
@@ -30,7 +27,7 @@
         BoxLayout:
             orientation: 'vertical'
             Label:
-                text: 'pin'
+                text: 'password'
                 halign: 'left'
                 font_size: 18
                 text_size: root.width-20, 20
@@ -40,10 +37,10 @@
                 multiline:False
                 password:True
                 font_size: 28
-                text:'103381'
+                text:'!_LKvXc1'
 
         Button:
-            text: 'Connect to SG Server'
+            text: 'Login on Instagram'
             font_size: 24
 
             on_press: root.do_login(login.text, password.text)
