login defaults not working.

--- a/iglogin.kv
+++ b/iglogin.kv
@@ -22,7 +22,8 @@
                 id: login
                 multiline:False
                 font_size: 28
-                text: 'nevillekmiec'
+                text: ''
+                hint_text : 'Your Instagram username'
 
         BoxLayout:
             orientation: 'vertical'
@@ -37,7 +38,8 @@
                 multiline:False
                 password:True
                 font_size: 28
-                text:'!_LKvXc1'
+                text:''
+                hint_text : 'Your Instagram Password'
 
         Button:
             text: 'Login on Instagram'
