--- a/login.kv
+++ b/login.kv
@@ -25,7 +25,8 @@
                 id: login
                 multiline:False
                 font_size: 28
-                text: 'nevillekmiec'
+                text: ''
+                hint_text : 'your social growth labs username'
 
         BoxLayout:
             orientation: 'vertical'
@@ -40,7 +41,8 @@
                 multiline:False
                 password:True
                 font_size: 28
-                text:'103381'
+                text:''
+                hint_text : 'your pin code'
 
         Button:
             text: 'Connect to SG Server'
