--- a/ready.kv
+++ b/ready.kv
@@ -50,7 +50,7 @@
                 text: "0 / 0"
                
             Label:
-                id: lblUnLike
+                id: lblLike
                 text: "0 / 0"
             Label:
                 id: lblStoryView
@@ -89,6 +89,7 @@
                 id: lblFollowExchange
             Label:
                 id: lblCommentExchange
+                text: " 0 / 0 "
                 size_hint: 1, 0.8
                
             
